--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "html-webpack-plugin": "^5.5.4",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
-  "name": "@hexlet/code",
-  "description": "[![Actions Status](https://github.com/Darkon96/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Darkon96/frontend-project-11/actions)",
+  "name": "my-webpack-project",
+  "description": "My webpack project",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
@@ -95,7 +104,12 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
