--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "html-webpack-plugin": "^5.5.4",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
@@ -23,6 +28,7 @@
     "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
     "balanced-match": "^1.0.2",
+    "bootstrap": "^5.3.2",
     "brace-expansion": "^1.1.11",
     "callsites": "^3.1.0",
     "chalk": "^4.1.2",
