--- a/package.json
+++ b/package.json
@@ -2,113 +2,45 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "debug": "^4.3.4",
     "eslint": "^8.55.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.4",
+    "jest": "^29.3.1",
+    "jest-cli": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^7.8.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "name": "@hexlet/code",
-  "description": "My webpack project",
+  "description": "RSS aggregator",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "acorn": "^8.11.2",
-    "acorn-jsx": "^5.3.2",
-    "ajv": "^6.12.6",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "argparse": "^2.0.1",
-    "balanced-match": "^1.0.2",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "brace-expansion": "^1.1.11",
-    "callsites": "^3.1.0",
-    "chalk": "^4.1.2",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "concat-map": "^0.0.1",
-    "cross-spawn": "^7.0.3",
-    "debug": "^4.3.4",
-    "deep-is": "^0.1.4",
-    "doctrine": "^3.0.0",
-    "escape-string-regexp": "^4.0.0",
-    "eslint-scope": "^7.2.2",
-    "eslint-visitor-keys": "^3.4.3",
-    "espree": "^9.6.1",
-    "esquery": "^1.5.0",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^5.3.0",
-    "esutils": "^2.0.3",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
-    "fastq": "^1.15.0",
-    "file-entry-cache": "^6.0.1",
-    "find-up": "^5.0.0",
-    "flat-cache": "^3.2.0",
-    "flatted": "^3.2.9",
-    "fs.realpath": "^1.0.0",
-    "glob": "^7.2.3",
-    "glob-parent": "^6.0.2",
-    "globals": "^13.23.0",
-    "graphemer": "^1.4.0",
-    "has-flag": "^4.0.0",
-    "ignore": "^5.3.0",
-    "import-fresh": "^3.3.0",
-    "imurmurhash": "^0.1.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
-    "is-path-inside": "^3.0.3",
-    "isexe": "^2.0.0",
-    "js-yaml": "^4.1.0",
-    "json-buffer": "^3.0.1",
-    "json-schema-traverse": "^0.4.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "keyv": "^4.5.4",
-    "levn": "^0.4.1",
-    "locate-path": "^6.0.0",
-    "lodash.merge": "^4.6.2",
-    "minimatch": "^3.1.2",
-    "ms": "^2.1.2",
-    "natural-compare": "^1.4.0",
-    "once": "^1.4.0",
-    "optionator": "^0.9.3",
-    "p-limit": "^3.1.0",
-    "p-locate": "^5.0.0",
-    "parent-module": "^1.0.1",
-    "path-exists": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^3.1.1",
-    "prelude-ls": "^1.2.1",
-    "punycode": "^2.3.1",
-    "queue-microtask": "^1.2.3",
-    "resolve-from": "^4.0.0",
-    "reusify": "^1.0.4",
-    "rimraf": "^3.0.2",
-    "run-parallel": "^1.2.0",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "strip-ansi": "^6.0.1",
-    "strip-json-comments": "^3.1.1",
-    "supports-color": "^7.2.0",
-    "text-table": "^0.2.0",
-    "type-check": "^0.4.0",
-    "type-fest": "^0.20.2",
-    "uri-js": "^4.4.1",
-    "which": "^2.0.2",
-    "wrappy": "^1.0.2",
-    "yocto-queue": "^0.1.0",
-    "yup": "^1.3.2"
+    "i18next": "^23.8.2",
+    "lodash": "^4.17.21",
+    "npm-check-updates": "^16.6.2",
+    "on-change": "^5.0.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
